Version 0.3.0 of Gaffer2.